# alchimera

./: Cargo.toml  IMPLEMENTATION_GUIDELINES.md  README.md  SPEC.md
assets/data/: README.md
benches/: chunk_generation.rs  object_placement.rs  rock_generator.rs  smoke.rs  tree_generator.rs
crates/alchimera_core/: Cargo.toml
crates/alchimera_core/src/: alchemy.rs  crafting.rs  error.rs  ids.rs  inventory.rs  item.rs  lib.rs  material.rs  save.rs  seed.rs  validation.rs
crates/alchimera_core/tests/: alchemy_tests.rs  crafting_tests.rs  id_tests.rs  inventory_tests.rs  material_item_tests.rs  save_tests.rs  seed_tests.rs  validation_tests.rs
crates/alchimera_game/: Cargo.toml
crates/alchimera_game/src/: building.rs  crafting.rs  diagnostics.rs  harvesting.rs  input.rs  interaction.rs  inventory_ui.rs  lib.rs  objects.rs  persistence.rs  player.rs  runtime_metrics.rs  states.rs  streaming.rs  terrain_rendering.rs  ui.rs  world.rs
crates/alchimera_game/tests/: app_state_tests.rs  building_tests.rs  chunk_streaming_tests.rs  crafting_system_tests.rs  diagnostics_tests.rs  harvesting_tests.rs  headless_metrics_tests.rs  input_camera_tests.rs  interaction_tests.rs  inventory_ui_tests.rs  object_spawning_tests.rs  persistence_tests.rs  player_tests.rs  terrain_rendering_tests.rs
crates/alchimera_generation/: Cargo.toml
crates/alchimera_generation/src/: biome.rs  chunk.rs  lib.rs  mesh.rs  modification_log.rs  objects.rs  rock.rs  terrain.rs  tree.rs
crates/alchimera_generation/tests/: biome_tests.rs  chunk_coord_tests.rs  height_sampling_tests.rs  modification_log_tests.rs  rock_generator_tests.rs  (+6 more)
crates/alchimera_object_viewer/: Cargo.toml
docs/plans/: parallel-subagent-task-breakdown.md
docs/playtests/: 2026-05-12-mvp-vertical-slice.md
docs/profiling/: 2026-05-11-generation-baseline.md  2026-05-12-mvp-baseline.md  README.md
docs/reviews/: 2026-05-12-mvp-final-review.md
src/: main.rs
(+5 files in other folders)
